--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   collection: ^1.15.0
-
+  flutter_screenutil: ^5.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
